--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "react-starter-kit",
   "version": "1.0.0",
   "description": "Starter kit for React JavaScript project",
+  "homepage": "http://mvdegtyar.github.io/react-player",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode=production",
-    "start": "webpack serve --open"
+    "start": "webpack serve --open",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +19,7 @@
     "babel-loader": "^8.2.5",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
+    "gh-pages": "^4.0.0",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
