--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,4 +30,7 @@ jobs:
           npm run build
           
       - name: Deploy react app to github pages
-        uses: tanwanimohit/deploy-react-to-ghpages@v1.0.1
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          npm run deploy
