--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           
       - name: Deploy react app to github pages
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name mvdegtyar
+          git config user.email mv.degtyar@gmail.com
           git remote set-url origin https://github.com/mvdegtyar/react-player.git
           npm run deploy
