--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,5 +33,5 @@ jobs:
         run: |
           git config user.name mvdegtyar
           git config user.email mv.degtyar@gmail.com
-          git remote set-url origin https://github.com/mvdegtyar/react-player.git
+          git remote set-url origin https://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@github.com/mvdegtyar/react-player.git
           npm run deploy
