--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  build_test:
+  build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
@@ -29,9 +29,24 @@ jobs:
           npm install
           npm run build
           
-      - name: Deploy react app to github pages
-        run: |
-          git config user.name "mvdegtyar"
-          git config user.email "mv.degtyar@gmail.com"
-          git remote set-url origin https://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@github.com/mvdegtyar/react-player.git
-          npm run deploy
+  # Deploy job
+  deploy:
+    # Add a dependency to the build job
+    needs: build
+
+    # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+
+    # Deploy to the github-pages environment
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+
+    # Specify runner + deployment step
+    runs-on: ubuntu-latest
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v1
