--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,11 +34,7 @@ jobs:
 
       - name: Deploy 
         run: |
-          git config --global user.name $user_name
-          git config --global user.email $user_email
           git remote set-url origin https://git:${github_token}@github.com/${GITHUB_REPOSITORY}
-          npm run deploy
+          npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
         env:
-          user_name: 'github-actions-bot1'
-          user_email: '<support+actions@github.com>'
           github_token: ${{ secrets.GITHUB_TOKEN }}
