--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,6 +37,6 @@ jobs:
           git remote set-url origin https://git:${github_token}@github.com/${GITHUB_REPOSITORY}
           npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
         env:
-        #  github_token: ${{ secrets.GITHUB_TOKEN }}
-          github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+        #   github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
           
